--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -22,7 +22,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby-version: ['2.6', '2.7', '3.0']
+        ruby-version: ['2.7']
 
     env:
       REDIS_HOST: redis
@@ -30,7 +30,7 @@ jobs:
     services:
       redis:
         image: redis
-        ports: [6379, 6379]
+        ports: ["6379:6379"]
         options: >-
           --entrypoint redis-server
           --health-cmd "redis-cli ping"
